# isswrapper

./: .gitignore  README.md  isswrapper_getting_started.ipynb  pipeline_ISS.securities.ipynb  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: pre-commit.yml
.ipynb_checkpoints/: pipeline_ISS.securities-checkpoint.ipynb
ISS/: __init__.py  candles.py  helpers.py  plots.py  securities.py  trades.py
isswrapper/: __init__.py  helpers.py
isswrapper/isswrapper.egg-info/: SOURCES.txt  top_level.txt
isswrapper/loaders/: candles.py  securities.py  sitenews.py  trades.py
notebooks/: candles_example.ipynb  securities_example.ipynb
pipelines/: pipeline_ISS.securities.ipynb  pipeline_ISS.trades.ipynb  pipeline_ISS.trades_.ipynb
pipelines/.ipynb_checkpoints/: pipeline_ISS.candles-checkpoint.ipynb  pipeline_ISS.trades-checkpoint.ipynb
src/isswrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/isswrapper/loaders/: async_sitenews.py  securities.py  sitenews.py
src/isswrapper/util/: async_helpers.py  helpers.py  plots.py
tests/: loaders_securities.py  loaders_sitenews.py  temp_1.py  test_ISS.candles.py  test_ISS.securities.py  test_ISS.trades.py
tests/old/: test_ISS.candles.py  test_ISS.securities.py  test_ISS.trades.py
