[project]
name = "isswrapper"
version = "0.1.0"
description = "Simple wrapper for Moscow Exchange API (ISS Queries)"
readme = "README.md"
dynamic = ["dependencies"]

    
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}